--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   direction: rtl;
   font-family: 'BYekan';
+  -webkit-tap-highlight-color: transparent;
 }
 
 body{
@@ -87,7 +88,7 @@ header ul li a{
   position: relative;
   width: 60%;
   height: 300px;
-  background-image: url(/assets/img/slider.png);
+  background-image: url(../img/slider.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
