slove a mistake and create services

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -16,6 +16,7 @@ body{
   background-color: #f2f2f9;
 }
 
+/* Header */
 header {
   width: 100%;
   max-width: 1054px;
@@ -73,14 +74,6 @@ header ul li a{
   text-decoration: none;
   font-size: 20px;
   color: #8693b1;
-}
-
-/* Header Content */
-.header-content{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 10px;
 }
 
 /* slider */
@@ -219,59 +212,124 @@ header ul li a{
   background-color: #f16161;
 }
 
+/* Main */
+main{
+  width: 100%;
+  max-width: 1054px;
+  margin: 0 auto;
+}
+
+/* content */
+.content{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+/* services */
+.services{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-gap: 1rem 2rem;
+  margin-top: 40px;
+  padding: 2rem;
+  background: #fffefa;
+  border-radius: 5px;
+  
+}
+
+.service-item{
+  color: #d0c69d;
+}
+
+.sevice-icon {
+  margin-left: 0.5rem;
+}
+
+/* .off{
+  grid-area: ;
+}
+.support{}
+.interducing{}
+.weblog{} */
 
 /* Responsive */
 
 
 /* Tablet */
 @media only screen and (max-width: 968px){
+  /* header */
   nav ul {
     display: none;
   }
 
-  .header-content{
+  /* content */
+  .content{
     display: block;
     margin: 20px ;
   }
+
+  /* slider */
   .slider{
     width: 100%;
   }
+
   /* hotel search */
   .hotel-search{
     width: 100%;
     margin-top: 20px;
   }
-
   .search-city-title{
   grid-area: 1/1/2/2;
-}
-.search-city{
-  grid-area: 1/2/2/5;
-}
-.search-hotel-title{
-  grid-area: 2/1/3/2;
-}
-.search-hotel{
-  grid-area: 2/2/3/5;
-}
-.search-date-title{
-  grid-area: 3/1/4/2;
-}
-.search-from-date{
-  grid-area: 3/2/4/3;
-}
-.search-to-date{
-  grid-area: 3/3/4/4;
-}
-.search-btns{
-  grid-area: 4/1/5/3;
-}
+  }
+  .search-city{
+    grid-area: 1/2/2/5;
+  }
+  .search-hotel-title{
+    grid-area: 2/1/3/2;
+  }
+  .search-hotel{
+    grid-area: 2/2/3/5;
+  }
+  .search-date-title{
+    grid-area: 3/1/4/2;
+  }
+  .search-from-date{
+    grid-area: 3/2/4/3;
+  }
+  .search-to-date{
+    grid-area: 3/3/4/4;
+  }
+  .search-btns{
+    grid-area: 4/1/5/3;
+  }
+
+  /* services */
+  .service-item{
+    margin-right: 3rem;
+  }
+  .off{
+    grid-area: 1/1/2/3;
+  }
+  .support{
+    grid-area: 1/3/2/5;
+  }
+  .interducing{
+    grid-area: 2/1/3/3;
+  }
+  .weblog{
+    grid-area: 2/3/3/5;
+  }
 
 }
 
 
 /* Mobile */
 @media only screen and (max-width:  650px){
+
+/* hotel search */
 .hotel-search [class*="icon-"] {
     font-size: 1.2rem;
     margin-left: 0.4rem;
@@ -291,6 +349,7 @@ header ul li a{
 .search-hotel{
   grid-area: 2/3/3/5;
 }
+  /* model 1 */
 .search-date-title{
   grid-area: 3/1/4/3;
 }
@@ -300,6 +359,7 @@ header ul li a{
 .search-to-date{
   grid-area: 4/3/5/5;
 }
+  /* model 2 */
 /* .search-date-title{
   grid-area: 3/1/4/3;
 }
@@ -313,6 +373,24 @@ header ul li a{
   grid-area: 5/1/6/5;
   margin-top: 20px;
 }
+
+/* services */
+  .service-item{
+    margin-right: 0rem;
+  }
+  .off{
+    grid-area: 1/1/2/5;
+  }
+  .support{
+    grid-area: 2/1/3/5;
+  }
+  .interducing{
+    grid-area: 3/1/4/5;
+  }
+  .weblog{
+    grid-area: 4/1/5/5;
+  }
+
 }
 
 
