--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -255,6 +255,197 @@ main{
 .interducing{}
 .weblog{} */
 
+
+/* city list */
+.city-list{
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem 2rem;
+}
+.city-list-title{
+  justify-self: start;
+  grid-area: 1/1/2/3;
+}
+.city-title-icon{
+  margin-left: 0.5rem;
+  color: #bdc5d8;
+}
+.city-title-list{
+  margin-left: 1rem;
+  color: #8693b1;
+}
+.city-title-desciption{
+  margin-left: 1rem;
+  color: #bdc5d8;
+}
+.city-see-more{
+  justify-self: end;
+  grid-area: 1/3/2/5;
+  cursor: pointer;
+}
+.city-see-more span{
+  margin-left: 1rem;
+  color: #8693b1;
+}
+.city-item{
+  position: relative;
+  border-radius: 10px;
+  cursor: pointer;
+  overflow: hidden;
+}
+.city-item img{
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+.city-off{
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  transform: rotate(-0.1turn);
+  padding: 7px 4px;
+  border-radius: 50%;
+  color: #ffffff;
+  background-color: rgb(241, 97, 97) !important;
+  outline: 10px solid rgba(241, 97, 97, 0.15) ;
+  box-shadow: 0px 0px 0px 20px rgba(241, 97, 97, 0.05);
+}
+.city-tehran{
+  grid-area: 2/1/3/2;
+}
+.city-shiraz{
+  grid-area: 2/2/3/3;
+}
+.city-esfahan{
+  grid-area: 2/3/3/4;
+}
+.city-tabriz{
+  grid-area: 2/4/3/5;
+}
+
+
+/* service-2 */
+.service-2{
+  background-image: url(../img/service2-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left;
+  padding: 2rem;
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-gap: 1rem 2rem;
+  border-radius: 5px;
+}
+.winter-off{
+  color: #bed6c3;
+  grid-area: 1/1/2/2;
+}
+.dariush-reserve {
+  grid-area: 1/2/2/5;
+}
+.dariush-reserve .dot{
+  margin-left: 1rem;
+  display: inline-block;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: rgb(89, 213, 94);
+  outline: 5px solid rgba(89, 213, 94, 0.15) ;
+  box-shadow: 0px 0px 0px 15px rgba(89, 213, 94, 0.05);
+}
+.dariush-reserve .text{
+  margin-left: 2rem;
+  color: #bed6c3;
+}
+.dariush-reserve .arrow{
+  color: #bed6c3;
+}
+
+/* hotel list */
+.hotel-list{
+  margin: 40px 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem 2rem;
+}
+.hotel-list div[class*="hotel"]{
+  /* background-color: #9ccc65; */
+}
+.hotel-item{
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 100%;
+  height: 300px;
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+}
+.hotel-item-off{
+  position: absolute;
+  top: 40px;
+  left: 25%;
+  transform: rotate(-0.1turn);
+  padding: 7px 4px;
+  border-radius: 50%;
+  background-color: rgb(255, 255, 255);
+  outline: solid 10px rgba(255, 255, 255, 0.15) ;
+  box-shadow:  0px 0px 0px 20px rgba(255, 255, 255, 0.05);
+  color: #f16161;
+}
+.hotel-item-name{
+  position: absolute;
+  bottom: 20px;
+  text-align: center;
+  width: 100%;
+  color: #ffffff;
+}
+.hotel-list-title{
+  justify-self: start;
+  grid-area: 1/1/2/3;
+}
+.hotle-title-icon{
+  margin-left: 0.5rem;
+  color: #bdc5d8;
+}
+.hotle-title-text{
+  margin-left: 1rem;
+  color: #8693b1;
+}
+.hotle-title-off{
+  color: #bdc5d8;
+}
+.hotel-see-more{
+  justify-self: end;
+  grid-area: 1/3/2/5;
+}
+.hotel-see-more span {
+  margin-left: 1rem;
+  color: #8693b1;
+  cursor: pointer;
+}
+.Qaser-hotel{
+  grid-area: 2/1/3/2;
+  background-image: url(../img/Qaser-shirin-hotel.png);
+  
+}
+.chamran-hotel{
+  grid-area: 2/2/3/3;
+  background-image: url(../img/chamran-hotel-shiraz.png);
+}
+.abasi-hotel{
+  grid-area: 2/3/3/4;
+  background-image: url(../img/abasi-hotel-esfahan.png);
+}
+.dariush-hotel{
+  grid-area: 2/4/3/5;
+  background-image: url(../img/dariush-hotel-kish.png);
+}
+
+
+
 /* Responsive */
 
 
@@ -323,6 +514,67 @@ main{
     grid-area: 2/3/3/5;
   }
 
+  /* city list */
+  .city-list{
+    margin: 40px 20px 0px 20px;
+  }
+  .city-list-title{
+    grid-area: 1/1/2/3;
+  }
+  .city-see-more{
+    grid-area: 1/3/2/5;
+  }
+  .city-tehran{
+    grid-area: 2/1/3/3;
+  }
+  .city-shiraz{
+    grid-area: 2/3/3/5;
+  }
+  .city-esfahan{
+    grid-area: 3/1/4/3;
+  }
+  .city-tabriz{
+    grid-area: 3/3/4/5;
+  }
+
+  /* service-2 */
+  .winter-off{
+    grid-area: 1/1/2/3;
+  }
+  .dariush-reserve {
+    grid-area: 2/1/3/3;
+  }
+  .dariush-reserve .dot{
+  margin-left: 0.5rem;
+  }
+  .dariush-reserve .text{
+    margin-left: 1rem;
+  }
+
+  /* hotel list */
+  .hotel-list{
+    margin: 40px 20px;
+  }
+  .hotel-list-title{
+    justify-self: start;
+    grid-area: 1/1/2/3;
+  }
+  .hotel-see-more{
+    justify-self: end;
+    grid-area: 1/3/2/5;
+  }
+  .Qaser-hotel{
+    grid-area: 2/1/3/3;
+  }
+  .chamran-hotel{
+    grid-area: 2/3/3/5;
+  }
+  .abasi-hotel{
+    grid-area: 3/1/4/3;
+  }
+  .dariush-hotel{
+    grid-area: 3/3/4/5;
+  }
 }
 
 
@@ -391,6 +643,67 @@ main{
     grid-area: 4/1/5/5;
   }
 
+ /* city list */
+  .city-list{
+    margin: 0px 20px 0px 20px;
+  }
+  .city-list-title{
+    grid-area: 1/1/2/5;
+  }
+  .city-see-more{
+    justify-self: start;
+    grid-area: 2/1/3/5;
+  }
+  .city-tehran{
+    grid-area: 3/1/4/5;
+  }
+  .city-shiraz{
+    grid-area: 4/1/5/5;
+  }
+  .city-esfahan{
+    grid-area: 5/1/6/5;
+  }
+  .city-tabriz{
+    grid-area: 6/1/7/5;
+  }
+
+  /* sevice-2 */
+  .service-2{
+    background-position: right;
+  }
+  .winter-off{
+    grid-area: 1/1/2/5;
+  }
+  .dariush-reserve {
+    grid-area: 2/1/3/5;
+  }
+
+  /* hotel list */
+  .hotel-item-off{
+    position: absolute;
+    top: 40px;
+    left:50px;
+  }
+  .hotel-list-title{
+    justify-self: start;
+    grid-area: 1/1/2/5;
+  }
+  .hotel-see-more{
+    justify-self: start;
+    grid-area: 2/1/3/5;
+  }
+  .Qaser-hotel{
+    grid-area: 3/1/4/5;
+  }
+  .chamran-hotel{
+    grid-area: 4/1/5/5;
+  }
+  .abasi-hotel{
+    grid-area: 5/1/6/5;
+  }
+  .dariush-hotel{
+    grid-area: 6/1/7/5;
+  }
 }
 
 
